2018-05-11  Mark Wielaard  <mark@klomp.org>

	* dwarf_formudata.c (dwarf_formudata): Handle DW_AT_macros as macptr.
	* dwarf_getmacros.c (get_table_for_offset): Add DW_MACRO_define_sup,
	DW_MACRO_undef_sup, DW_MACRO_import_sup, DW_MACRO_define_strx and
	DW_MACRO_undef_strx. Add str_offsets_base_off to fake CU. Deal with
	DW_AT_macros. Use libdw_valid_user_form.

2018-05-09  Mark Wielaard  <mark@klomp.org>

	* dwarf_formstring.c (__libdw_cu_str_off_base): Moved to...
	* libdwP.h (__libdw_cu_str_off_base): ...here. Make static inline.
	(str_offsets_base_off): New internal function that also parses
	.debug_str_offsets header if necessary.

2018-05-11  Mark Wielaard  <mark@klomp.org>

	* dwarf_siblingof.c (dwarf_siblingof): Don't reference cu till it is
	known the Dwarf_Die is came from is valid.
	* libdwP.h (__libdw_dieabbrev): Check cu is not NULL.

2018-05-08  Mark Wielaard  <mark@klomp.org>

	* dwarf_formref.c (__libdw_formref): Explicitly don't handle
	DW_FORM_ref_sup4 and DW_FORM_ref_sup8.
	* dwarf_formref_die.c (dwarf_formref_die): Handle DW_FORM_ref_sup4
	and DW_FORM_ref_sup8.
	* dwarf_formstring.c (dwarf_formstring): Handle DW_FORM_strp_sup
	as DW_FORM_GNU_strp_alt.

2018-05-05  Mark Wielaard  <mark@klomp.org>

	* dwarf.h: Add DWARF line content descriptions.
	* libdwP.h (libdw_valid_user_form): New static function.
	* dwarf_getsrclines.c (read_srclines): Check and parse version 5
	DWARF header, dir and file tables separately from older versions
	where different.

2018-04-24  Mark Wielaard  <mark@klomp.org>

	* dwarf_begin_elf.c (dwarf_scnnames): Add ".debug_line_str".
	* dwarf_error.c (errmsgs): Add DWARF_E_NO_DEBUG_STR and
	DWARF_E_NO_DEBUG_LINE_STR.
	* dwarf_formstring.c (dwarf_formstring): Handle DW_FORM_line_strp.
	Get data from either .debug_str or .debug_line_str.
	* libdwP.h: Add IDX_debug_line_str, DWARF_E_NO_DEBUG_STR and
	DWARF_E_NO_DEBUG_LINE_STR.

2018-04-03  Mark Wielaard  <mark@klomp.org>
