@@ -1,3 +1,7 @@
+2018-05-12  Mark Wielaard  <mark@klomp.org>
+
+	* readelf.c (print_debug): Also recognize .dwo section name variants.
+
 2018-05-15  Dmitry V. Levin  <ldv@altlinux.org>
 
 	* elflint.c (check_elf_header): Fix typo in error diagnostics.
